--- a/src/main.css
+++ b/src/main.css
@@ -40,11 +40,12 @@ body {
     display: flex;
     flex-direction: row;
     z-index: 999;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.8s ease-in-out;
 }
 
 .box img {
     width: 7vw;
+    height: 3.5vw;
     cursor: pointer;
     margin-right: 19vw;
 }
@@ -90,8 +91,10 @@ body {
 
 .title {
     width: 10vw;
+    height: 1.2vw;
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
+    font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
     color: whitesmoke;
     background-image: linear-gradient(to right top, #f48a20, #f57629, #f36133, #ef4c3d, #e83447, #e4274e, #de1756, #d8015d, #d50263, #d20568, #cf0a6e, #cb1073);
@@ -99,18 +102,15 @@ body {
     border-style: none;
     border-radius: 6.51vw;
     padding: 1vw;
-    margin: auto;
+    margin: 0 0 0 1vw;
     font-weight: bold;
-    letter-spacing: 0.5vw;
+    letter-spacing: normal;
     cursor: pointer;
+
 }
 
 #title {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1.2vw;
-    letter-spacing: normal;
     transition: all 0.3s ease-in-out;
-    margin: 0 0 0 1vw;
 }
 
 #title:hover {
@@ -252,13 +252,14 @@ body {
 }
 
 .desc_button {
+    font-family: 'Raleway', sans-serif;
     font-size: 1.41vw;
     text-transform: none;
-    letter-spacing: normal;
     font-weight: 400;
     width: 16.8vw;
+    height: auto;
     padding: 1.15vw 1vw;
-    animation: none;
+    margin: auto;
     background-image: none;
     background-color: #ef4c3d;
 }
@@ -284,6 +285,7 @@ body {
 }
 
 .main_info i {
+    font-size: 2.2vw !important;
     margin-top: -0.4vw;
     color: #1abc9c;
 }
@@ -621,4 +623,70 @@ body {
     text-transform: uppercase;
     text-decoration: underline;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 1024px) {
+    #title {
+        margin-top: 1vw;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .main {
+        padding-top: 8vw;
+    }
+
+    .box img {
+        height: 4.2vw;
+        margin-top: 1vw;
+    }
+
+    #title {
+        margin-top: 2vw;
+    }
+
+    .privacy {
+        margin: 1.2vw auto;
+    }
+
+    .logo1 {
+        top: 137vw;
+    }
+
+    .logo2 {
+        top: 217.2vw;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .box img {
+        margin-right: 10vw;
+    }
+
+    .box ul {
+        margin-block-start: 0;
+        margin-block-end: 0;
+    }
+
+    #price_tag {
+        top: 30vw;
+    }
+
+    .form_container {
+        flex-direction: column;
+    }
+
+    .form_box {
+        width: 42vw;
+        height: 37vw;
+        margin: 1vw auto;
+    }
+
+    .logo1 {
+        top: 137.5vw;
+    }
+
+    .logo2 {
+        top: 218.8vw;
+    }
 }
